Выделены модули event-service и request-service. Несколько классов дописаны, несколько удалено как не используемые.